--- a/Trabajo final.Rmd
+++ b/Trabajo final.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Trabajo final - Grupo 4"
-author: "Calvo, Gabriela; Ibáñez Ángel; Núñez, César; Orellana, Cristian"
+author: "Calvo, Gabriela; Ib????ez ??ngel; N????ez, C??sar; Orellana, Cristian"
 date: "2023-01-31"
 output:
   prettydoc::html_pretty:
@@ -8,23 +8,28 @@ output:
 #bibliography: mybibfile.bib
 ---
 
-# 1. Introducción
+# 1. Introducci??n
 
+La efectividad de la gesti??n de los recursos p??blicos resulta fundamental para la reducci??n de las brechas sociales, la provisi??n de servicios p??blicos y la promoci??n del crecimiento econ??mico (Evans & Rauch, 1999; Acemoglu, 2005; Besley & Persson, 2010). Sin embargo, la calidad de esta gesti??n es limitada en Am??rica Latina y, en espec??fico, en el Per??. De hecho, de acuerdo con el ??ndice de Desarrollo del Servicio Civil, el Per?? cuenta con una gesti??n no ??ptima obteniendo un puntaje de 41 sobre 100 posibles (BID, 2018).
 
+Asimismo, otro de los limitantes de la gesti??n de recursos p??blicos est?? asociada a la corrupci??n de funcionarios. De acuerdo con la Contralor??a General de la Rep??blica (CGR), en el 2021 la incidencia de la corrupci??n alcanz?? al 13.6% del presupuesto p??blico del gobierno general (CGR, 2022). En cuanto a el destino de los recursos p??blicos, se ha identificado que la compra de bienes y servicios por parte de las entidades p??blicas representan el segundo concepto de mayor incidencia de corrupci??n (13.6%) despu??s de la inversi??n p??blica (15%). En este mismo estudio, la CGR identific?? que la provincia de Lima Metropolitana concentr?? el 19.8% del da??o patrimonial generado por el gobierno general en las compras de bienes y servicios. 
+
+Los procesos de compras p??blicas en el Per?? se rigen por la Ley de Contrataciones del Estado (LCE) la cual establece las modalidades de contrataci??n en el Estado, as?? como establece los supuestos que permiten realizar compras exceptu??ndose de la LCE. Uno de los supuestos de excepci??n son las contrataciones de baja cuant??a o hasta ocho unidades impositivos tributarias (UIT). En este tipo de comrpas exceptuadas, cada entidad puede definir individualmente los procedimientos, lo cual no garantiza necesariamente un m??nimo nivel de transparencia y competencia. De acuerdo con el Organismo Supervisor de Contrataciones del Estado (OSCE), cerca del 25% de las compras p??blicas se realizan exceptu??ndose de la LCE debido a que por cada proceso de compra desarrollado en el marco de la LCE hay 55 procesos que se desarrollan exceptu??ndose de esta. 
+
+Considerando lo anterior, el presente trabajo tiene como objetivo identificar y analizar las compras p??blicas directas (menores a 8 UIT) de bienes y servicios por parte de las municipalidades distritales de Lima Metropolitana en el ??ltimo trimestre del 2022. En particular, el trabajo busca explorar los datos provistos por el Portal de Datos Abiertos del OSCE sobre las ??rdenes de compra y servicio utilizando principalmente los paquetes 'tidyverse', 'ggplot2' y 'mapsPERU' para la manipulaci??n y visualizaci??n de los resultados. 
+
+Las siguientes secciones del documento se organizan de la siguiente manera: la segunda secci??n presenta un conjunto de antecedentes relacionados a las compras p??blicas en el Per??; la tercera secci??n detalla la metodolog??a utilizada en el estudio; la cuarta secci??n presenta los resultados del an??lisis y una discusi??n sobre los mismos; la quinta secci??n presenta las conclusiones encontradas y la ??ltima secci??n presenta la bibliograf??a utilizada. 
 
 # 2. Antecedentes
 
+# 3. Metodolog??a
 
-
-# 3. Metodología
-
-
-
-# 4. Resultados y discusión
+# 4. Resultados y discusi??n
 
 ```{r include=FALSE}
 #install.packages("mapsPERU")
 #install.packages("sf")
+#install.packages("plotly")
 library(tidyverse)
 library(mapsPERU)
 library(dplyr)
@@ -68,7 +73,7 @@ mun_list <- read.xlsx(link_munis)
 # de municipalidades (mun_list). Para ello utilizamos la funci??n left_join y filter.
 # Asimismo, generamos las variables anio_emision y mes_emision que nos serviran  
 # para identificar el mes de la emision de las ordenes de compra y servicios. 
-# Debido a que nos interesa en particular el ultimo trimestre del año, nos quedamos
+# Debido a que nos interesa en particular el ultimo trimestre del a??o, nos quedamos
 # con las ordenes emitidas en octubre, noviembre y diciembre. 
 bd_final <- bd_osce |> 
   left_join(mun_list, by= "RUC_ENTIDAD") |> 
@@ -83,10 +88,12 @@ bd_final <- bd_osce |>
   filter(anio_emision == 2022 & (mes_emision == 10 | mes_emision == 11 | mes_emision == 12))
 ```
 
-## 4.1. Registro oportuno de las órdenes de compra y servicio
-Un primer foco de nuestra atencion reside en el registro oportuno de las ordenes de servicio. De acuerdo con la Directiva N° 003-2020-OSCE/CD, el registro de las contrataciones en el SEACE de las órdenes de compra y servicio debe realizarse "(...) a partir del día siguiente de emitida la órden respectiva, siendo el plazo máximo de cinco días hábiles del mes siguiente." (OSCE, 2020). Esto quiere decir que una entidad realiza sus compras a tiempo siempre y cuando registre sus órdenes de compra y servicio antes del sexto día hábil del mes siguiente.
+## 4.1. Registro oportuno de las ??rdenes de compra y servicio
 
-Para evaluar el registro
+Un primer foco de nuestra atencion reside en el registro oportuno de las ordenes de servicio. De acuerdo con la Directiva N?? 003-2020-OSCE/CD, el registro de las contrataciones en el SEACE de las ??rdenes de compra y servicio debe realizarse "(...) a partir del d??a siguiente de emitida la ??rden respectiva, siendo el plazo m??ximo de cinco d??as h??biles del mes siguiente." (OSCE, 2020). Esto quiere decir que una entidad realiza sus compras a tiempo siempre y cuando registre sus ??rdenes de compra y servicio antes del sexto d??a h??bil del mes siguiente.
+
+Para evaluar el adecuado registro de las ordenes de compra, se ha calculado el porcentaje de ??rdenes de compra y ??rdenes de servicio que cada una de las municipalidades distritales ha registrado a tiempo en el ??ltimo trimestre del 2022. Revisando esta informaci??n se observa que solo 3 y 4 municipalidades distritales registraron a tiempo el 100% de sus ??rdenes de servicios y compras, respectivamente. De hecho, la ??nica que registr?? a tiempo todas las ??rdenes de servicios y compras del ??ltimo trimestre de 2022 fue la Municipalidad Metropolitana de Lima. En contraste, 12 municipalidades distritales no registraron a tiempo ninguna de sus ??rdenes de servicio en el ??ltimo trimestre del 2022, mientras que 9 municipalidades en el caso de las ??rdenes de compra. Esto sumado a que cerca de 20 de las 43 municipalidades de Lima Metropolitana no han registrado ninguna ??rden de servicio en el SEACE en el ??ltimo trimestre, da cuenta del d??ficit en la oportunidad del registro de las ??rdenes de compra y servicio en los gobiernos subnacionales.
+
 ```{r echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
 bd_registro <- bd_final |> 
   mutate(reg_a_tiempo = case_when(mes_emision == mes_registro ~ 100 ,
@@ -113,42 +120,45 @@ db_lima_reg_os <- merge(x = map_lima, y = map_reg_os, by = "UBIGEO", all.x = TRU
   arrange(desc(pct_reg_a_tiempo)) |> 
   mutate(cat_registro = case_when(pct_reg_a_tiempo<33 ~"1. Menos 33% de las OS registradas a tiempo",
                                   pct_reg_a_tiempo<66 & pct_reg_a_tiempo>=33 ~"2. Entre 33% y 66% de las OS registradas a tiempo",
-                                  pct_reg_a_tiempo>=66 ~"3. Más del 66% de las OS registradas a tiempo",
-                                  TRUE ~ "Sin información"))
+                                  pct_reg_a_tiempo>=66 ~"3. M??s del 66% de las OS registradas a tiempo",
+                                  TRUE ~ "Sin informaci??n"))
   
 db_lima_reg_oc <- merge(x = map_lima, y = map_reg_oc, by = "UBIGEO", all.x = TRUE) |> #Juntamos las bases de datos: 
   arrange(desc(pct_reg_a_tiempo)) |> 
   mutate(cat_registro = case_when(pct_reg_a_tiempo<33 ~"1. Menos 33% de las OC registradas a tiempo",
                                   pct_reg_a_tiempo<66 & pct_reg_a_tiempo>=33 ~"2. Entre 33% y 66% de las OC registradas a tiempo",
-                                  pct_reg_a_tiempo>=66 ~"3. Más del 66% de las OC registradas a tiempo",
-                                  TRUE ~ "Sin información"))
+                                  pct_reg_a_tiempo>=66 ~"3. M??s del 66% de las OC registradas a tiempo",
+                                  TRUE ~ "Sin informaci??n"))
 
 
 colores_s <- c("#74a9cf", "#3690c0", "#034e7b", "white")
 colores_c <- c("#fed98e", "#fe9929","#cc4c02", "white")
 
-db_lima_reg_os |> 
+plot_os <-  db_lima_reg_os |> 
   ggplot() +
   aes(geometry=geometry) +
   scale_fill_manual(values=colores_s)+
   geom_sf(aes(fill=cat_registro)) +
   labs(title = "Imagen 1. Porcentaje de ordenes de servicio registradas a tiempo")+
-  guides(fill=guide_legend(title="Porcentaje de órdenes de servicio registradas a tiempo"))+
+  guides(fill=guide_legend(title="Porcentaje de ??rdenes de servicio registradas a tiempo"))+
   theme(axis.text.x = element_blank(), axis.text.y = element_blank(), axis.ticks = element_blank())
 
-db_lima_reg_oc |> 
+plot_oc <-  db_lima_reg_oc |> 
   ggplot() +
   aes(geometry=geometry) +
   scale_fill_manual(values=colores_c)+
   geom_sf(aes(fill=cat_registro)) +
   labs(title = "Imagen 2. Porcentaje de ordenes de compra registradas a tiempo")+
-  guides(fill=guide_legend(title="Porcentaje de órdenes de compra registradas a tiempo"))+
+  guides(fill=guide_legend(title="Porcentaje de ??rdenes de compra registradas a tiempo"))+
   theme(axis.text.x = element_blank(), axis.text.y = element_blank(), axis.ticks = element_blank())
-```
 
+library(plotly)
+
+plotly::ggplotly(plot_os) 
+plotly::ggplotly(plot_oc) 
+
+```
 
 # 5. Conclusiones
 
-
-
-# 6. Bibliografía
+# 6. Bibliograf??a
